<resources>
    <string name="app_name">Calculator</string>
    <string name="symbol_btn_clear">C</string>
    <string name="symbol_btn_delete">DEL</string>
    <string name="symbol_btn_add">+</string>
    <string name="symbol_btn_subtract">-</string>
    <string name="symbol_btn_multiply">×</string>
    <string name="symbol_btn_divide">÷</string>
    <string name="symbol_btn_openorclose">()</string>
    <string name="symbol_btn_equal">=</string>
    <string name="symbol_btn_unary">+/-</string>

    <string name="ERROR_ENDWITHOPERATOR">Expression cannot end with operator</string>
    <string name="ERROR_MISSING_BRACKETS">Missing ")"</string>
    <string name="ERROR_EVALUE">Bad expression!</string>
    <string name="ERROR_HISTORY">History is empty!</string>
</resources>
